==> HXHndj/MSPM0G3519_CodeTemplate/OLED_SPI_Test/OLED.c <==
#define OLED_CHARSET_UTF8
#include "ti_msp_dl_config.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#include "delay.h"

void OLED_GPIO_Init(void)
{
	uint32_t i, j;
	
	/*在初始化前，加入适量延时，待OLED供电稳定*/
	for (i = 0; i < 1000; i ++)
	{
		for (j = 0; j < 1000; j ++);
	}
	
	/*置引脚默认电平*/
	OLED_W_RES(1);
	OLED_W_DC(1);
	OLED_W_CS(1);
}

void OLED_WriteCommand(uint8_t Command)
{
	OLED_W_CS(0);					//拉低CS，开始通信
	OLED_W_DC(0);					//拉低DC，表示即将发送命令
	
	/*等待SPI不忙，然后发送数据*/
	while (DL_SPI_isBusy(SPI_0_INST));
	DL_SPI_transmitData8(SPI_0_INST, Command);
	while (DL_SPI_isBusy(SPI_0_INST));
	
	OLED_W_CS(1);					//拉高CS，结束通信
}

void OLED_WriteData(uint8_t *Data, uint8_t Count)
{
	uint8_t i;
	
	OLED_W_CS(0);					//拉低CS，开始通信
	OLED_W_DC(1);					//拉高DC，表示即将发送数据
	
	/*循环Count次，进行连续的数据写入*/
	for (i = 0; i < Count; i ++)
	{
		/*等待SPI不忙，然后发送数据*/
		while (DL_SPI_isBusy(SPI_0_INST));
		DL_SPI_transmitData8(SPI_0_INST, Data[i]);
		while (DL_SPI_isBusy(SPI_0_INST));
	}
	
	OLED_W_CS(1);					//拉高CS，结束通信
}

void OLED_DrawLine(int16_t X0, int16_t Y0, int16_t X1, int16_t Y1)
{
	int16_t x, y;
	int16_t dx, dy;
	int16_t x_inc, y_inc;
	int16_t error;
	int16_t index;
	
	dx = X1 - X0;
	dy = Y1 - Y0;
	
	if (dx >= 0)
	{
		x_inc = 1;
	}
	else
	{
		x_inc = -1;
		dx = -dx;
	}
	
	if (dy >= 0)
	{
		y_inc = 1;
	}
	else
	{
		y_inc = -1;
		dy = -dy;
	}
	
	x = X0;
	y = Y0;
	
	/*将两点之间画一条直线*/
	if (dx > dy)
	{
		error = dx >> 1;
		for (index = 0; index <= dx; index ++)
		{
			OLED_DrawPoint(x, y);
			error += dy;
			if (error > dx)
			{
				error -= dx;
				y += y_inc;
			}
			x += x_inc;
		}
	}
	else
	{
		error = dy >> 1;
		for (index = 0; index <= dy; index ++)
		{
			OLED_DrawPoint(x, y);
			error += dx;
			if (error > dy)
			{
				error -= dy;
				x += x_inc;
			}
			y += y_inc;
		}
	}
}
